@@ -26,6 +26,7 @@ Current Devel
 	- Chakora: Added $Chakora::LINKD which is the SID of the server we are linked to.
 	- protocol/inspircd12: Added tracking for module load/unloads. protocol/inspircd20 tracker coming soon.
 	- Chakora: Deleted $Chakora::LINKD as sidInfo provides this data.
+	- Modules: Added operserv/modreload for reloading modules.
 
 1.0.0-alpha2
 	- HostServ: Update hostserv/main to match the updated API.
